--- a/day4/pynet_testing/.github/workflows/commit.yaml
+++ b/day4/pynet_testing/.github/workflows/commit.yaml
@@ -34,4 +34,4 @@ jobs:
 
       - name: Run Tests
         run: |
-          py.test -v -s tests/unit/test_utilities.py
+          py.test -v -s ../../../pynet_testing/test_ex1.py
