--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -25,11 +25,11 @@ jobs:
 
       - name: Run black
         run: |
-          black --check .
+          black --check ../../day4/pynet_testing/test_ex1.py
 
       - name: Run linter
         run: |
-          pylama .
+          pylama ../../day4/pynet_testing/test_ex1.py
 
       - name: Run Tests
         run: |
