updated commit yaml

--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -28,7 +28,7 @@ jobs:
           pwd
           ls -lha
          
-          black --check day4/pynet_testing/test_ex1.py
+          # black --check day4/pynet_testing/test_ex1.py
 
       - name: Run linter
         run: |
