--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -23,10 +23,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run black
+      - name: List all new files and Run black
         run: |
           pwd
-          ls -lha
+          ls -lRhat
          
           # black --check day4/pynet_testing/test_ex1.py
 
