--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -28,11 +28,11 @@ jobs:
           pwd
           ls -lRhat
          
-          # black --check day4/pynet_testing/test_ex1.py
+          black --check .
 
       - name: Run linter
         run: |
-          # pylama day4/pynet_testing/test_ex1.py
+          pylama .
 
       - name: Run Tests
         run: |
